[package]
name = "aoc2023"
version = "0.0.1"
edition = "2021"

[dependencies]
argh = "0.1"
colored = "2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
serde_yaml = "0.9"
num = "0.4.1"
chrono = "0.4.31"
prime_factorization = "1.0.4"

[dev-dependencies]
criterion = "0.4.0"

# The "debug" profile
[profile.release]
panic = "abort"
debug = true
lto = "thin"

# The profile to benchmark with (`cargo run --profile benchmark`)
[profile.benchmark]
inherits = "release"
debug = false
lto = "fat"

[profile.bench]
inherits = "release"
debug = false
lto = "fat"

[[bench]]
name = "bench"
harness = false
